<small>
<b>Versione 0.6.0</b><br>
- Nuova impostazione per la visualizzazione della home. Sono state aggiunte due tipologie (Classica: semplice e veloce, Avanzata: con visualizzazione a pagine richiede più risorse). <i>Di default per dispositivi pre-honeycomb (versione android 3.0) settata a Classic, per dispositivi post-honeycomb settata ad avanzata.</i><u> Se in modalità avanzata l'applicazione si blocca e si deve forzare la chiusura provare a settare la modalità classica.</u><br>
- Aggiunta visualizzazione del changelog<br>
- Aggiunta lingua: Spagnolo<br>
<br>
<b>Versione 0.5.9</b><br>
- Nuova impostazione personalizzata aggiunta per la visualizzazione delle operazioni nella home. <i>Default è "Display, affari negli ultimi 7 giorni"</i>. L'impostazione può essere modificata nella pagina delle impostazioni.<br>
- Cliccando su un conto nella vista elenco conto vi porterà direttamente alla visualizzazione delle transazioni per il conto specifico.<br>
<br>
<b>Versione 0.5.8</b><br>
- bugfix: valuta senza separatore delle migliaia<br>
- bugfix minori<br>
<br>
<b>Versione 0.5.7</b><br>
- <b>pubblicazione su Google Play</b><br>
- gestione: conti, beneficiari, categorie e sotto-categorie<br>
- inserimento, modifica, cancellazione transazioni<br>
- utilizzo database su scheda di memoria<br>
- utilizzo dropbox per sincronizzare il database tra il dispositivo Android e il PC (Linux, Mac e Windows)<br>
</small>